# ChangeLog for app-portage/gentoolkit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.188 2010/04/08 22:34:30 fuzzyray Exp $

*gentoolkit-0.3.0_rc10-r1 (08 Apr 2010)

  08 Apr 2010; Paul Varner <fuzzyray@gentoo.org>
  +gentoolkit-0.3.0_rc10-r1.ebuild, +files/eclean.313901.patch:
  Revision bump to fix regression in eclean where metadata.dtd gets removed
  (Bug 313901).

*gentoolkit-0.3.0_rc10 (05 Apr 2010)

  05 Apr 2010; Christian Ruppert <idl0r@gentoo.org>
  +gentoolkit-0.3.0_rc10.ebuild, gentoolkit-9999.ebuild:
  Version bump to 0.3.0_rc10, please take a look at bug 237964 for more
  information about the changes in this release. Thanks to all contributors!
  Merge ebuild related changes in _rc10 to gentoolkit-9999 as well.

  01 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  gentoolkit-0.2.4.6.1.ebuild, gentoolkit-0.3.0_rc8.ebuild,
  gentoolkit-0.3.0_rc8-r1.ebuild, gentoolkit-0.3.0_rc9.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #305793

  29 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gentoolkit-0.2.4.6.1.ebuild:
  x86 stable wrt bug #305793

  23 Mar 2010; Brent Baude <ranger@gentoo.org> gentoolkit-0.2.4.6.1.ebuild:
  Marking gentoolkit-0.2.4.6.1 ppc64 for bug 305793

  12 Mar 2010; Paul Varner <fuzzyray@gentoo.org> gentoolkit-9999.ebuild:
  Update gentoolkit-9999 to support the python3 ABI

*gentoolkit-0.2.4.6.1 (11 Mar 2010)

  11 Mar 2010; Paul Varner <fuzzyray@gentoo.org> -gentoolkit-0.2.4.6.ebuild,
  -gentoolkit-0.2.4.6-r1.ebuild, +gentoolkit-0.2.4.6.1.ebuild,
  -files/revdep-rebuild.143498.patch:
  Version bump to backport lastest epkginfo to fix bug 308929. Remove older
  gentoolkit-0.2.4.6 releases.
  Bug 305793 tracks fixes to the gentoolkit-0.2.4.6 release.

  01 Mar 2010; Paul Varner <fuzzyray@gentoo.org>
  files/revdep-rebuild.143498.patch:
  Fix missing quote in patch

*gentoolkit-0.2.4.6-r1 (01 Mar 2010)
