@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX eclean.313901.patch 1497 RMD160 21579445342977fe59a7a464605c963a43c59fa7 SHA1 daefcf1dde3c70b04d0bf528b88335656b48fe61 SHA256 2e825cb0ddfafcf139b9ae31c232e1f4b6f8401ca25070fe47c6ab3a4312f7be
 DIST gentoolkit-0.2.4.5.tar.gz 89084 RMD160 8f982737c11be05444af8e2d11ffc29f21e961bd SHA1 7186f6228f9eee75772010bdf6c5ccb783232bd9 SHA256 22072025124e5108b4f924645c7a084ff90c535d1ba642bbef193c7e143e7587
 DIST gentoolkit-0.2.4.6.1.tar.gz 90135 RMD160 7cfe8a8a6e697bbab0d93ec6d82f5b0aee8bcc03 SHA1 82e8a785a753a9e86063dd4fff2f4f864e4224bb SHA256 d057ce14e037e313ae085ac70871a56bbc147efe9beae8fcf8c818afcaa63896
@@ -6,6 +9,7 @@ DIST gentoolkit-0.3.0_rc7.tar.gz 100911 RMD160 076aca565a17f40c6087c90b4c5685992
 DIST gentoolkit-0.3.0_rc8.tar.gz 118976 RMD160 db7f8660f451a9489466e5de76bafd1a7cb38061 SHA1 ce717ef1215f5f144b76662aeca3ba3fcf102cf2 SHA256 36c69107a849b3d598c3c100fbeaa596a9cbc0f51398b7061b462e9ca8b1aa5c
 DIST gentoolkit-0.3.0_rc9.tar.gz 119944 RMD160 96e687ee3d74182518b42230f9306675db474596 SHA1 11a781acfe669f80507b45992861ff43a59c6405 SHA256 e30e524eba74d73e25fe92cf67690de8cbce6403e0c8dd78615f2d3c4a55506e
 EBUILD gentoolkit-0.2.4.5.ebuild 1639 RMD160 7d71bc0f2c2e9a7fc0b2799d1ce6483e8cce033c SHA1 60daaae341cbd6d01210c244db5795fecd10b3d9 SHA256 f5624b9cf53fae444389b4f051017b50ad574c923ed02a292b9779119641262b
+EBUILD gentoolkit-0.2.4.6.1-r1.ebuild 1944 RMD160 b674b03a2dd5a985d2b6b09848de361590fac747 SHA1 70644e80bd85f3e9e8efc3ee766846142ec47b27 SHA256 1cf0e44d0df20664217b6dca5ac004f40e83b0a3309b0d49590f9cfa09066e85
 EBUILD gentoolkit-0.2.4.6.1.ebuild 1736 RMD160 c258febb3765a2399a4d73f22e4f0dfd646b0211 SHA1 7ded40a609553fe54ed28bd64fe00dbe957d5d95 SHA256 be3837a25ba7d931aeb3123a8e44394bf7cdb74be048a173b27257dda70517b9
 EBUILD gentoolkit-0.3.0_rc10-r1.ebuild 1906 RMD160 00958f347b441ae333fd54b447c6dfac08605f7d SHA1 073374bc37068c1c9571a5da70fb23d85d6d6e7b SHA256 676c98df6adc61581ca5169673fc991dede1e14afa855ca39faa654d0291a4f1
 EBUILD gentoolkit-0.3.0_rc10.ebuild 1830 RMD160 2a43c74b5b0601e7d09c788430761b849b091928 SHA1 5fbebb0b3d88f3010fda2a3faa87c82d8f898b41 SHA256 5929e79c4d17fe8a039326340ec6a2b96bef61dd879a0788173c881f75ee8ce0
@@ -14,5 +18,12 @@ EBUILD gentoolkit-0.3.0_rc8-r1.ebuild 2508 RMD160 15b442bc47bde24913e53f2d25cc8c
 EBUILD gentoolkit-0.3.0_rc8.ebuild 2326 RMD160 6ff2fdecc09ec0f94cb66531f867d65554da7b93 SHA1 d2550513c4329475c3c4bac5c18e92f0c861da43 SHA256 fe75f7ce8b56eee393c868b21d0ab4a972b0ee47137af0d826038cbd1e79fd85
 EBUILD gentoolkit-0.3.0_rc9.ebuild 2505 RMD160 4083c0d7927de4efb34fe0f7917878e8cc3eb724 SHA1 303afc844229c33c036f5ba26926f822631bcbe2 SHA256 7060ab10e0d803a56533ebd6f4d450db0a9ac452d7a375ffba78a2ecc6364386
 EBUILD gentoolkit-9999.ebuild 1865 RMD160 af3f6f13a29a702f6c847d21c10e5e0abe76b7f6 SHA1 76af94e9557d24e9972b870c1bac950c297a8975 SHA256 2da185769c4b32463dd12e1600bde50cb63f77d50a9f336b6b08d45c8f8ca061
-MISC ChangeLog 56093 RMD160 dbda285575c0201e4da2f5a753348e494cb60abb SHA1 1a30ed6f7df20d300aa10858431e22ecb051e791 SHA256 818fccce29687ee73e291fa2a3d87bb16b3e4e2a03d2d5cf2c9428b62a3bd34b
+MISC ChangeLog 56351 RMD160 de8ab32a7427f641c105ff365d07c57a7c627808 SHA1 bb0a5bb52282be47024ee24e2794a499873e63a2 SHA256 a35744e11c032fa5365eeee037b45eed1aa0d79764aae12a9180d9338d694803
 MISC metadata.xml 451 RMD160 b1cce9123da273149c731793696937f9b3d02c60 SHA1 6126c34edcb6ed5f4274e060881378cc1cf10757 SHA256 1a2def4d28f69d6bffeb0b09e97ce53e6822e457d5d9308000a1010dca32abeb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkvAzncACgkQ/ejvha5XGaNgBwCdF7bZibT+DCFXrpYde9d0deVc
+3OUAoIgaR9xeEIanczWTOAG8oo4cf+2b
+=bcko
+-----END PGP SIGNATURE-----
